--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
     "firebase": "^9.6.1",
+    "i18next": "^21.8.14",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
     "lodash.throttle": "^4.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.18.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
